# GINA

./: .gitignore  CMakeLists.txt  GINAConfig.h.in
70_EGNOS_Project/: CMakeLists.txt
70_EGNOS_Project/core/: CMakeLists.txt
70_EGNOS_Project/core/files/: ProtectionLevelOutput.pl  ProtectionLevelOutput_Out_Out.pl  coastline.txt  codg0310.18i  corg0140.19i
70_EGNOS_Project/core/src/: main.cpp
70_EGNOS_Project/core/tests/: test_IonosphericDelayCorrectionsMessageParser.cpp
70_EGNOS_Project/core/util/: IONEX_Compare.m  Main_PlotIONEXdiff.m  MakeStatisticsPlot.m  PlotIONEXdiff.m  ProtectionDataProcess_Main.m  Stanford_Main.m  abs.conf  get_code.sh  get_ems.sh  ionomap.conf  plotIonoMap.m  pos_stat.m  process_iono.sh  readBlock.m  readposfile.m  sbas.conf
70_EGNOS_Project/extra/: CMakeLists.txt  CompareIONEX.cpp  EGNOS_PL_Engine.cpp  EMS2IONEX.cpp  PegasusIonoUtility.cpp  example_args.txt  main.cpp
70_EGNOS_Project/extra/EGNOS_Presentation/: UMLofEGNOS.vsdx  ~$$UMLofEGNOS.~vsdx  ~$EGNOS_Ionospheric_Model_Analysis.pptx
70_EGNOS_Project/files/: CODG0190.19I  CODG0200.19I  brdc0190.19n  carg0310.18i  carg0310_out.18i  coastline.txt  h17ems_ionex_Europe_2.5x2.5_IGPMap.18i  h17ems_ionex_Europe_2.5x2.5_InterPol.18i  h17ems_ionex_Europe_5x5_IGPMap.18i  h17ems_ionex_Europe_5x5_InterPol.18i  h17ems_ionex_out.18i  h17ems_ionex_out_debug.18i  h17ems_ionex_out_debug_IGPMap.18i  h17ems_ionex_out_debug_InterPol.18i  test_Ionex_out.18i
70_EGNOS_Project/files/EMS_124_2009_01_06_17/: h15ems_ionex_Europe_5x5_IGPMap.18i  h15ems_ionex_Europe_5x5_IGPMap_all.18i  h17.ems  h17ems_ionex_Europe_1x1_InterPol.18i  h17ems_ionex_Europe_2.5x2.5_IGPMap.18i  h17ems_ionex_Europe_5x5_IGPMap.18i
70_EGNOS_Project/files/EMS_136_2019_02_11_15/: h15.ems  h15ems_ionex_Europe_1x1_InterPol_Last.19i  h15ems_ionex_Europe_2_5x2_5_InterPol_Last.19i  h15ems_ionex_Europe_5x5_IGPMap.19i  h15ems_ionex_Europe_5x5_IGPMap_All.19i  h15ems_ionex_Europe_5x5_IGPMap_Last.19i  h15ems_ionex_Europe_5x5_InterPol_All.19i  h15ems_ionex_Europe_5x5_InterPol_Last.19i
70_EGNOS_Project/files/Ionex_from_h17/: h17ems_ionex_out_00001.18i  h17ems_ionex_out_00002.18i  h17ems_ionex_out_00003.18i  h17ems_ionex_out_00004.18i  h17ems_ionex_out_00005.18i  h17ems_ionex_out_00006.18i  h17ems_ionex_out_00007.18i  h17ems_ionex_out_00008.18i  h17ems_ionex_out_00009.18i  h17ems_ionex_out_00010.18i  h17ems_ionex_out_00011.18i  h17ems_ionex_out_00012.18i  h17ems_ionex_out_00013.18i  h17ems_ionex_out_00014.18i  h17ems_ionex_out_00015.18i  h17ems_ionex_out_00016.18i  h17ems_ionex_out_00017.18i  h17ems_ionex_out_00018.18i  h17ems_ionex_out_00019.18i  h17ems_ionex_out_00020.18i  h17ems_ionex_out_00021.18i  h17ems_ionex_out_00022.18i  h17ems_ionex_out_00023.18i  h17ems_ionex_out_00024.18i  h17ems_ionex_out_00025.18i  h17ems_ionex_out_00026.18i  h17ems_ionex_out_00027.18i  h17ems_ionex_out_00028.18i  h17ems_ionex_out_00029.18i  h17ems_ionex_out_00030.18i  h17ems_ionex_out_00031.18i  h17ems_ionex_out_00032.18i  h17ems_ionex_out_00033.18i  h17ems_ionex_out_00034.18i  h17ems_ionex_out_00035.18i  h17ems_ionex_out_00036.18i  h17ems_ionex_out_00037.18i  h17ems_ionex_out_00038.18i  h17ems_ionex_out_00039.18i  h17ems_ionex_out_00040.18i  (+496 more)
70_EGNOS_Project/files/Ionex_from_h17_Europe/: h17ems_ionex_Europe_00001.18i  h17ems_ionex_Europe_00005.18i  h17ems_ionex_Europe_00007.18i  h17ems_ionex_Europe_00012.18i  h17ems_ionex_Europe_00013.18i  h17ems_ionex_Europe_00017.18i  h17ems_ionex_Europe_00018.18i  h17ems_ionex_Europe_00019.18i  h17ems_ionex_Europe_00021.18i  h17ems_ionex_Europe_00023.18i  h17ems_ionex_Europe_00025.18i  h17ems_ionex_Europe_00026.18i  h17ems_ionex_Europe_00029.18i  h17ems_ionex_Europe_00030.18i  h17ems_ionex_Europe_00031.18i  h17ems_ionex_Europe_00032.18i  h17ems_ionex_Europe_00034.18i  h17ems_ionex_Europe_00038.18i  h17ems_ionex_Europe_00039.18i  h17ems_ionex_Europe_00041.18i  h17ems_ionex_Europe_00043.18i  h17ems_ionex_Europe_00044.18i  h17ems_ionex_Europe_00047.18i  h17ems_ionex_Europe_00050.18i  h17ems_ionex_Europe_00051.18i  h17ems_ionex_Europe_00052.18i  h17ems_ionex_Europe_00055.18i  h17ems_ionex_Europe_00056.18i  h17ems_ionex_Europe_00059.18i  h17ems_ionex_Europe_00060.18i  h17ems_ionex_Europe_00061.18i  h17ems_ionex_Europe_00062.18i  h17ems_ionex_Europe_00063.18i  h17ems_ionex_Europe_00064.18i  h17ems_ionex_Europe_00066.18i  h17ems_ionex_Europe_00067.18i  h17ems_ionex_Europe_00068.18i  h17ems_ionex_Europe_00069.18i  h17ems_ionex_Europe_00073.18i  h17ems_ionex_Europe_00077.18i  (+101 more)
70_EGNOS_Project/files/Ionex_from_h17_Europe_Interpolated/: h17ems_ionex_Europe_2.5_00002.18i  h17ems_ionex_Europe_2.5_00006.18i  h17ems_ionex_Europe_2.5_00007.18i  h17ems_ionex_Europe_2.5_00012.18i  h17ems_ionex_Europe_2.5_00013.18i  h17ems_ionex_Europe_2.5_00018.18i  h17ems_ionex_Europe_2.5_00019.18i  h17ems_ionex_Europe_2.5_00020.18i  h17ems_ionex_Europe_2.5_00025.18i  h17ems_ionex_Europe_2.5_00027.18i  h17ems_ionex_Europe_2.5_00028.18i  h17ems_ionex_Europe_2.5_00030.18i  h17ems_ionex_Europe_2.5_00031.18i  h17ems_ionex_Europe_2.5_00032.18i  h17ems_ionex_Europe_2.5_00033.18i  h17ems_ionex_Europe_2.5_00034.18i  h17ems_ionex_Europe_2.5_00035.18i  h17ems_ionex_Europe_2.5_00037.18i  h17ems_ionex_Europe_2.5_00043.18i  h17ems_ionex_Europe_2.5_00044.18i  h17ems_ionex_Europe_2.5_00046.18i  h17ems_ionex_Europe_2.5_00047.18i  h17ems_ionex_Europe_2.5_00048.18i  h17ems_ionex_Europe_2.5_00049.18i  h17ems_ionex_Europe_2.5_00052.18i  h17ems_ionex_Europe_2.5_00054.18i  h17ems_ionex_Europe_2.5_00058.18i  (+114 more)
70_EGNOS_Project/src/: main.cpp  main_unfinishedStudyHowToUseIonexFileAndHowtoWriteItOut.cpp
70_EGNOS_Project/tests/: test_EGNOS_EMS_perser.cpp  test_IGPMap.cpp  test_Interpolation_Part10.cpp  test_Interpolation_Part3.cpp  test_Interpolation_Part6.cpp  test_Ionex_Header_Out.cpp  test_Ionex_file_writing.cpp  test_IonosphericBandMask.cpp  test_IonosphericGridPointMasksMessageParser_part1.cpp
70_EGNOS_Project/util/: draw_iono.sh  get_ems.sh  get_obs.sh  ionomap.conf  pos_stat.m  read_ionex.m  read_ionexPREo2.m  read_ionexPREo3.m  readposfile.m  sbas.conf
(+3418 files in other folders)
